# LittleEngine

./: CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/configs/development/: LittleEngineEditor.ini
engine/source/editor/: CMakeLists.txt
engine/source/editor/include/: editor.h  editor_global_context.h  editor_ui.h
engine/source/editor/resource/: Editor.rc
engine/source/editor/source/: editor.cpp  editor_ui.cpp  main.cpp
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h  global_context.cpp  global_context.h
engine/source/runtime/core/: macro.h
engine/source/runtime/core/log/: log_system.h
engine/source/runtime/function/render/: window_system.cpp  window_system.h
engine/source/runtime/function/ui/: window_ui.cpp  window_ui.h
